syntax = "proto3";

package axbolt.saga;
option go_package = "saga";

// SagaKeySet is a container for a saga keset values serialized into the
// protobuf format before being persisted in a Bolt bucket
message SagaKeySet {
    string instance_id = 1;
    string persistence_key = 2;
    repeated string mapping_keys = 3;
} 
